--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ E-mail:fjananna.98@gmail.com
 <br>
 <hr>
 <h2 style="font-size: 140%; background-color: #CACFD2"><u>Personal Info</u></h2>
-<pre style="font-size: 130%">
+<pre style="font-size: 140%">
 Father's Name 		: Md. Habibur Rahman
 Mother's Name 		: Shahela Parvin 
 Date of Birth		: 16/03/98
@@ -66,5 +66,14 @@ Religion		: Islam
 Gender			: Female
 Nationality		: Bangladeshi
 </pre>
+<h2 style="font-size: 140%; background-color: #CACFD2"><u>Skills</u></h2>
+<ul style="font-size: 20px">
+	<li>Graphic Design</li>
+	<li>C Programming Language</li>
+	<li>MS Word</li>
+	<li>MS Excle</li>
+
+
+</ul>
 </body>
 </html>
